--- a/index.html
+++ b/index.html
@@ -10,7 +10,41 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="weather-app">
+        <h1>
+            New York, USA
+        </h1>
+        <ul>
+            <li>
+                Friday 05:00
+            </li>
+            <li>
+                Cloudy
+            </li>
+        </ul>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy">
+                12°C | °F
+            </div>
+            <div class="col-md-6">
+                <ul>
+                    <li>
+                        Precipitation: 0%
+                    </li>
+                    <li>
+                        Humidity: 73%
+                    </li>
+                    <li>
+                        Wind: 2 km/h
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
+        <small>
+            <a href="https://github.com/SanjanaEdge/weather-app" target="_blank">Open-sourced code</a> by Sanjana Edge
+        </small>
     </div>
     <script src="src/app.js"></script>
 </body>
