--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="src/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Weather App</title>
 </head>
 <body>
     <div class="container">
+        <div class="weather-app-wrapper">
         <div class="weather-app">
+        <div class="overview">
         <h1>
             New York, USA
         </h1>
@@ -22,10 +29,15 @@
                 Cloudy
             </li>
         </ul>
+        </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy">
-                12°C | °F
+                <div class="clearfix weather-temperature">
+                <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy" class="float-left">
+                <div class="float-left">
+                <strong>12</strong><span class="units">°C | <a href="#">°F</a></span>
+                </div>
+            </div>
             </div>
             <div class="col-md-6">
                 <ul>
@@ -45,6 +57,7 @@
         <small>
             <a href="https://github.com/SanjanaEdge/weather-app" target="_blank">Open-sourced code</a> by Sanjana Edge
         </small>
+        </div>
     </div>
     <script src="src/app.js"></script>
 </body>
