--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
 </head>
@@ -18,16 +19,10 @@
         <div class="weather-app-wrapper">
         <div class="weather-app">
         <div class="overview">
-        <h1>
-            New York, USA
-        </h1>
+        <h1 id="city"></h1>
         <ul>
-            <li>
-                Friday 05:00
-            </li>
-            <li>
-                Cloudy
-            </li>
+            <li>last updated <span id="date"></span></li>
+            <li id="description"></li>
         </ul>
         </div>
         <div class="row">
@@ -35,7 +30,7 @@
                 <div class="clearfix weather-temperature">
                 <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy" class="float-left">
                 <div class="float-left">
-                <strong>12</strong><span class="units">°C | <a href="#">°F</a></span>
+                <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a></span>
                 </div>
             </div>
             </div>
@@ -45,10 +40,10 @@
                         Precipitation: 0%
                     </li>
                     <li>
-                        Humidity: 73%
+                        Humidity: <span id="humidity"></span>%
                     </li>
                     <li>
-                        Wind: 2 km/h
+                        Wind: <span id="wind"></span> km/h
                     </li>
                 </ul>
             </div>
